--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,27 @@
           run : |
             mvn clean
             mvn -B package --file pom.xml
-            
+
+        - name: Build Docker Image
+          uses: actions/build-push-action@v2
+          with:
+            context: .
+            dockerfile: Dockerfile
+            push: false
+            tags: ${{ secrets.DOCKER_USERNAME }}/SuperMarketWithDb:$(date-%Y-%m-%d%H-%M-%S)
+        - name: Login to Docker Hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{secrets.DOCKER_USERNAME}}
+            password: ${{secrets.DOCKER_ACCESS_TOKEN}}
+        - name: Push to Docker Hub
+          uses: actions/build-push-action@v2
+          with:
+            context: .
+            dockerfile: Dockerfile
+            push: true
+            tags: ${{ secrets.DOCKER_USERNAME }}/SuperMarketWithDb:$(date-%Y-%m-%d%H-%M-%S)
+
             
 
 
